Enunciado 3 Completado y edicion de menu

--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -64,6 +64,12 @@
     <Compile Include="E3.Designer.cs">
       <DependentUpon>E3.cs</DependentUpon>
     </Compile>
+    <Compile Include="E32.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="E32.Designer.cs">
+      <DependentUpon>E32.cs</DependentUpon>
+    </Compile>
     <Compile Include="E4.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="E3.resx">
       <DependentUpon>E3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="E32.resx">
+      <DependentUpon>E32.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="E4.resx">
       <DependentUpon>E4.cs</DependentUpon>
