Actualización de Menu

--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -124,5 +124,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="img\Super Mario 3D World 8 Bit Remix.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\view-of-panama-city-and-ocean-with-white-sky-image_2914213.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
