--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cuenta de Ahorros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cuenta de Ahorros.Designer.cs">
+      <DependentUpon>Cuenta de Ahorros.cs</DependentUpon>
+    </Compile>
     <Compile Include="E1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transacciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Transacciones.Designer.cs">
+      <DependentUpon>Transacciones.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Cuenta de Ahorros.resx">
+      <DependentUpon>Cuenta de Ahorros.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="E1.resx">
       <DependentUpon>E1.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +117,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Transacciones.resx">
+      <DependentUpon>Transacciones.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
