--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -126,6 +126,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\pexels-photo-912110.jpeg" />
     <Content Include="img\Super Mario 3D World 8 Bit Remix.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
