--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgregarNumero.cs" />
     <Compile Include="E1.cs">
       <SubType>Form</SubType>
     </Compile>
