E2 Agregado al menu

--- a/Laboratorio3.csproj
+++ b/Laboratorio3.csproj
@@ -55,9 +55,11 @@
     </Compile>
     <Compile Include="E2.cs">
       <SubType>Form</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="E2.Designer.cs">
       <DependentUpon>E2.cs</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="E3.cs">
       <SubType>Form</SubType>
@@ -91,6 +93,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="E2.resx">
       <DependentUpon>E2.cs</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="E3.resx">
       <DependentUpon>E3.cs</DependentUpon>
